--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <hr width="15%" size="5" style="margin: auto; opacity: 1;">
         <div class="rps-container d-flex flex-wrap justify-content-around py-5" id="rps-container">
             <div class="first">
-                <img class="rock" id="rock" onclick="rpsGame(this)" src="https://downloader.la/temp/[Downloader.la]-617b21728c0f7.jpg" height="150" width="150" alt="">
+                <img class="rock" id="rock" onclick="rpsGame(this)" src="https://i.pinimg.com/236x/9e/6a/d1/9e6ad16278850e65dacdbd400608d57f.jpg" height="150" width="150" alt="">
             </div>
             <div class="second d-flex align-items-center">
                 <img class="paper" id="paper" onclick="rpsGame(this)" src="https://image.freepik.com/free-photo/design-space-paper-textured-background_53876-42312.jpg" height="150" width="150" alt="">
