--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         </h1>
         <hr width="15%" size="5" style="margin: auto; opacity: 1;">
+        <h3 class="text-center mt-5">Let's Play...Pick One</h3>
         <div class="rps-container d-flex flex-wrap justify-content-around py-5" id="rps-container">
             <div class="first">
                 <img class="rock" id="rock" onclick="rpsGame(this)" src="https://i.pinimg.com/236x/9e/6a/d1/9e6ad16278850e65dacdbd400608d57f.jpg" height="150" width="150" alt="">
